@@ -20,7 +20,7 @@ dev-java/junit
 "
 DEPEND=">=virtual/jdk-1.4 ${DEP}"
 RDEPEND=">=virtual/jre-1.4 ${DEP}"
-EANT_GENTOO_CLASSPATH="plexus-classworlds plexus-utils junit"
+JAVA_MAVEN_CLASSPATH="plexus-classworlds plexus-utils junit"
 
 JAVA_PKG_SRC_DIRS="src/main/java/"
 RESTRICT="test"
