@@ -1,5 +1,12 @@
 
 
+  02 Jun 2007; kiorky <kiorky@cryptelium.net>
+  plexus-container-default-1.0_alpha9.ebuild,
+  plexus-container-default-1.0_alpha10.ebuild,
+  plexus-container-default-1.0_alpha14.ebuild,
+  plexus-container-default-1.0_alpha24.ebuild:
+  moving to JAVA_MAVEN_CLASSPATH
+
   29 May 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
   Adding maven bootstrap flag
 
